<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hjdeveloper.smartbar.MenuActivity">

    <Button
        android:text="@string/myMixList"
        android:layout_width="80pt"
        android:layout_height="wrap_content"
        android:id="@+id/btnMyMixList"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Button
        android:text="@string/addMix"
        android:layout_width="80pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/btnAddMix"
        android:layout_below="@+id/btnMyMixList"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/preferences"
        android:layout_width="80pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/btnPreferences"
        android:layout_below="@+id/btnAddMix"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
