<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_mix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hjdeveloper.smartbar.AddMixActivity">


    <RelativeLayout
        android:id="@+id/BarraSuperior_nuevaMezcla"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey100"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView_titulo_NuevaMezcla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/addMix"
            android:textSize="24sp"
            android:layout_marginBottom="10dp" />

        <ImageButton
            android:id="@+id/button_atras_NuevaMezcla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:contentDescription="Atrás"
            android:textSize="12sp"
            android:onClick="volverAtras" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/BarraSuperior_nuevaMezcla"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right" >

            <TextView
                android:id="@+id/textView_nombre_NuevaMezcla"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/nameMix"
                android:textSize="16sp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/editText_nombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_nombre_NuevaMezcla"
                android:hint="@string/writeNameMix"
                android:inputType="text"
                android:text="Mezcla"
                android:textSize="16sp"
                android:ems="10"
                android:layout_marginBottom="10dp" >
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView_capacidadRecipiente"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_nombre"
                android:gravity="left"
                android:text="@string/quantity"
                android:textSize="16sp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/editText_capacidadRecipiente"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_capacidadRecipiente"
                android:hint="@string/writeQuantity"
                android:inputType="number"
                android:text="0"
                android:textSize="16sp"
                android:ems="10"
                android:layout_marginBottom="10dp" >
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView_cantidadesLiquidos_NuevaMezcla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_capacidadRecipiente"
                android:gravity="left"
                android:layout_marginRight="20dp"
                android:text="@string/porcentageLiquid"
                android:textSize="16sp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/textView_L1"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_cantidadesLiquidos_NuevaMezcla"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:text="@string/Bebida1"
                android:textSize="16sp"
                android:layout_width="60dp" />

            <SeekBar
                android:id="@+id/seekBar_porcentajeL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_cantidadesLiquidos_NuevaMezcla"
                android:layout_toRightOf="@+id/textView_L1"
                android:layout_alignRight="@+id/button_aceptar"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:max="100" >
            </SeekBar>

            <TextView
                android:id="@+id/textView_L2"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_L1"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:text="@string/Bebida2"
                android:textSize="16sp"
                android:layout_width="60dp" />

            <SeekBar
                android:id="@+id/seekBar_porcentajeL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/button_aceptar"
                android:layout_below="@+id/textView_L1"
                android:layout_toRightOf="@+id/textView_L2"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:max="100" >
            </SeekBar>

            <TextView
                android:id="@+id/textView_L3"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_L2"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:text="@string/Bebida3"
                android:textSize="16sp"
                android:layout_width="60dp" />

            <SeekBar
                android:id="@+id/seekBar_porcentajeL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/button_aceptar"
                android:layout_below="@+id/textView_L2"
                android:layout_toRightOf="@+id/textView_L3"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:max="100" >
            </SeekBar>

            <TextView
                android:id="@+id/textView_L4"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_L3"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:text="@string/Bebida4"
                android:textSize="16sp"
                android:layout_width="60dp" />

            <SeekBar
                android:id="@+id/seekBar_porcentajeL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/button_aceptar"
                android:layout_below="@+id/textView_L3"
                android:layout_toRightOf="@+id/textView_L4"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:max="100" >
            </SeekBar>

            <TextView
                android:id="@+id/textView_porcentaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_capacidadRecipiente"
                android:layout_toRightOf="@+id/textView_cantidadesLiquidos_NuevaMezcla"
                android:layout_alignRight="@+id/editText_porcentajeL1"
                android:layout_alignLeft="@+id/editText_porcentajeL1"
                android:ems="1"
                android:text="%"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView_cantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_capacidadRecipiente"
                android:layout_toRightOf="@+id/textView_porcentaje"
                android:layout_alignRight="@+id/editText_cantidadL1"
                android:layout_alignLeft="@+id/editText_cantidadL1"
                android:text="ml"
                android:ems="1"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editText_porcentajeL1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="%"
                android:text="0"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3"
                android:textSize="14sp"
                android:layout_below="@+id/textView_porcentaje"
                android:layout_toRightOf="@+id/seekBar_porcentajeL1">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText_cantidadL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ml"
                android:text="0"
                android:inputType="number"
                android:ems="5"
                android:textSize="14sp"
                android:layout_alignBaseline="@+id/textView_L1"
                android:layout_alignBottom="@+id/textView_L1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText_porcentajeL2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="%"
                android:text="0"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3"
                android:textSize="14sp"
                android:layout_alignBaseline="@+id/textView_L2"
                android:layout_alignBottom="@+id/textView_L2"
                android:layout_toRightOf="@+id/seekBar_porcentajeL2"
                android:layout_toEndOf="@+id/seekBar_porcentajeL2">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText_cantidadL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ml"
                android:text="0"
                android:inputType="number"
                android:ems="5"
                android:textSize="14sp"
                android:layout_alignBaseline="@+id/editText_porcentajeL2"
                android:layout_alignBottom="@+id/editText_porcentajeL2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText_porcentajeL3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="%"
                android:text="0"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3"
                android:textSize="14sp"
                android:layout_alignBaseline="@+id/textView_L3"
                android:layout_alignBottom="@+id/textView_L3"
                android:layout_toRightOf="@+id/seekBar_porcentajeL3"
                android:layout_toEndOf="@+id/seekBar_porcentajeL3">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText_cantidadL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ml"
                android:text="0"
                android:inputType="number"
                android:ems="5"
                android:textSize="14sp"
                android:layout_alignBaseline="@+id/editText_porcentajeL3"
                android:layout_alignBottom="@+id/editText_porcentajeL3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText_porcentajeL4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="%"
                android:text="0"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3"
                android:textSize="14sp"
                android:layout_alignBaseline="@+id/textView_L4"
                android:layout_alignBottom="@+id/textView_L4"
                android:layout_toRightOf="@+id/seekBar_porcentajeL4"
                android:layout_toEndOf="@+id/seekBar_porcentajeL4">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText_cantidadL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ml"
                android:text="0"
                android:inputType="number"
                android:ems="5"
                android:textSize="14sp"
                android:layout_alignBaseline="@+id/editText_porcentajeL4"
                android:layout_alignBottom="@+id/editText_porcentajeL4"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button_aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="crearMezcla"
                android:text="Aceptar"
                android:textSize="16sp"
                android:layout_below="@+id/textView_porcentajeTotal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp" />

            <TextView
                android:id="@+id/textView_porcentajeTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:ems="3"
                android:text="0"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignBaseline="@+id/textView_cantidadTotal"
                android:layout_alignBottom="@+id/textView_cantidadTotal"
                android:layout_alignLeft="@+id/editText_porcentajeL4"
                android:layout_alignStart="@+id/editText_porcentajeL4" />

            <TextView
                android:id="@+id/textView_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Total:"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@+id/textView_L4"
                android:layout_alignLeft="@+id/textView_L4"
                android:layout_alignStart="@+id/textView_L4" />

            <TextView
                android:id="@+id/textView_cantidadTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:ems="5"
                android:text="0"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@+id/textView_L4"
                android:layout_alignLeft="@+id/editText_cantidadL4"
                android:layout_alignStart="@+id/editText_cantidadL4" />

        </RelativeLayout>
    </ScrollView>


    <!--Lista de bebidas Alcoholicas-->


</RelativeLayout>
